Updated the CSS, fixed some issues with the navbar, added CSS for footer. fixed the holes in between scrollbar and form.

--- a/test/Content/Site.css
+++ b/test/Content/Site.css
@@ -3,19 +3,24 @@
     padding-bottom: 20px;
     background-image: url('Images/wallpaper-1945409.jpg');
     background-size:cover;
-    background-color: #fff;
+    background-color: black;
+    overflow:hidden;
+    background-repeat:no-repeat;
 }
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
-    background-color: white;
-    border: 30px solid #6495ed;
-    max-height: 500px;
-    overflow-y:auto;
-    width:auto;
-    margin:25px;
+    padding-top:7px;
+    background-color: #f2f2f2;
+    border-radius: 5px;
+    border: 23px solid #6495ed;
+    max-height: 525px;
+    overflow-y: overlay;
+    overflow-x: overlay;
+    max-width: 1400px;
+    margin: auto;
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
@@ -46,11 +51,11 @@ textarea {
 }
 
 a.classname {
-    background: url(../Content/Images/icon3.png) no-repeat top left;
+    /*background: url(../Content/Images/icon3.png) no-repeat top left;*/
     display: block;
     width: 60px;
     height: 51px;
-    text-indent: -9999px; /* hides the link text */
+    /*text-indent: -9999px;*/ /* hides the link text */
 }
 
 .custom {
@@ -69,20 +74,85 @@ h4{
 
 /* Style buttons */
 .btn {
-    background-color: DodgerBlue; /* Blue background */
-    border: none; /* Remove borders */
-    color: white; /* White text */
-    padding: 12px 16px; /* Some padding */
+/*    height:200px; 
+    width:200px; 
+    margin:18px; 
+    background-color:cornflowerblue; 
+    border:3.2px solid black; 
+    color:black;    
+    font-family:Calibri; 
+    font-size:x-large*/
+    background-color: mediumseagreen;  /*Blue background */
+    border: none;  /*Remove borders*/ 
+    color: white;  /*White text*/ 
+    padding: 12px 16px;  /*Some padding */
     font-size: 16px; /* Set a font size */
-    cursor: pointer; /* Mouse pointer on hover */
+    cursor: pointer;  /*Mouse pointer on hover */
 }
 
 /* Darker background on mouse-over */
 .btn:hover {
     background-color: RoyalBlue;
+    /*border-color: midnightblue;*/
+}
+
+/* Style buttons */
+.home-btn {
+    height: 200px;
+    width: 200px;
+    margin: 18px;
+    background-color: cornflowerblue;
+    border: 3.2px solid black;
+    color: black;
+    font-family: Calibri;
+    font-size: x-large
+    /*background-color: DodgerBlue;*/ /* Blue background */
+    /*border: none;*/ /* Remove borders */
+    /*color: white;*/ /* White text */
+    /*padding: 12px 16px;*/ /* Some padding */
+    /*font-size: 16px;*/ /* Set a font size */
+    /*cursor: pointer;*/ /* Mouse pointer on hover */
+}
+
+/* Darker background on mouse-over */
+.home-btn:hover {
+    background-color: RoyalBlue;
+    border-color: midnightblue;
+    color:white;
 }
 
 
+.container {
+    width:100%;
+    padding-right:60px;
+}
+
+.invisible-box {
+    padding-top: 30px;
+    height: 625px;
+    width: 900px;
+    margin: auto;
+}
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom:10px;
+    width: 65%;
+}
+
+footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 25px;
+    background-color: #101010;
+    color: #9d9d9d;
+    font-size: 12px;
+    padding-left:2px;
+    padding-top:3px;
+}
 /* Style inputs with type="text", select elements and textareas */
 /*input[type=text], select, textarea {
     width: 33%;
